-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13, 14
-
Component/s: hotspot
-
b21
-
arm
-
generic
(issue reported by christoph.goettschkes@microdoc.com)
The assertion assumes that atomic operations on 32-bit ARM are only possible for 32-bit types. This is only true, if the instructions LDREXD/STREXB are not present on the target platform.
The assertion assumes that atomic operations on 32-bit ARM are only possible for 32-bit types. This is only true, if the instructions LDREXD/STREXB are not present on the target platform.
- duplicates
-
JDK-8207645 ARM32: assertion on jtreg tests
-
- Closed
-